fixed colors for more readable text based on request

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 	padding:0;
 	font-family: 'Open Sans', 'sans-serif';
 	font-size: 1.0em;
-	color: #666;
+	color: #fff;
 	font-weight: 200;
 }
 
@@ -58,14 +58,14 @@ p {
 	margin-bottom: 20px;
 }
 
-a, 
+a,
 .sidebar li ul li a.readmore {
-	color: #999;
+	color: #fff;
 }
 
 a:hover,
 .sidebar li ul li a.readmore:hover {
-	color: #0757ce;
+	color: #fff;
 }
 
 a:focus {
@@ -73,7 +73,7 @@ a:focus {
 }
 
 
-a.button { 
+a.button {
     background-color: #0757ce;
     border-radius: 5px 5px 5px 5px;
     color: #FFFFFF;
@@ -100,7 +100,7 @@ fieldset legend {
 	font-weight: bold;
 	font-size: 13px;
 	padding-right: 10px;
-	color: #999;
+	color: #fff;
 }
 
 fieldset form {
@@ -110,38 +110,6 @@ fieldset form {
 fieldset p label {
 	float: left;
 	width: 150px;
-}
-
-form input, form select, form textarea {
-	background-color: #333;
-	padding: 5px;
-	color: #333333;
-	border: 1px solid #333;
-	border-right:1px solid #444;
-	border-bottom:1px solid #444;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 13px;
-}
-
-form input.formbutton {
-	border: none;
-    background-color: #0757ce;
-	color: #ffffff;
-	font-weight: bold;
-	padding: 6px 10px;
-	font-size: 12px;
-	letter-spacing: 1px;
-	width: auto;
-	overflow: visible;
-}
-
-form.searchform input {
-  font-size: 15px;
-    padding: 6px;
-}
-
-form.searchform p {
-	margin: 5px 0;
 }
 
 
@@ -261,7 +229,7 @@ nav ul li a {
     text-decoration: none;
 }
 nav ul li.selected a,
-nav ul li.selected a:hover { 
+nav ul li.selected a:hover {
 	color: #fff;
 	background-color: #0757ce;
 	font-weight:bold;
@@ -293,12 +261,12 @@ article {
     padding: 10px 5px 20px 10px;
  }
 
-article h2 { 
+article h2 {
     padding-bottom: 0;
     font-size: 2.2em;
 }
 
-article p, article ul, article ol { 
+article p, article ul, article ol {
     font-size: 0.9em;
 }
 
@@ -309,7 +277,7 @@ article .article-info {
     padding: 0 0 10px 0;
 }
 
-article .article-info a { 
+article .article-info a {
 	color: #666;
 }
 
@@ -322,7 +290,7 @@ article .article-info a {
 .sidebar h4 {
 	padding-bottom: 0;
 	font-weight: 100;
-	color: #333;
+	color: #222;
 	font-size: 1.1em;
 	padding: 5px 10px;
 	background-color: #666666;
@@ -354,7 +322,7 @@ article .article-info a {
 	font-size: 0.8em;
 }
 
-.sidebar li ul li.text { 
+.sidebar li ul li.text {
 	border-bottom: none;
 }
 
@@ -362,11 +330,11 @@ article .article-info a {
 
 .sidebar li ul li a {
 	font-weight: normal;
-	color: #666;
+	color: #fff;
 }
 
 .sidebar li ul li a:hover {
-	color: #999;
+	color: #fff;
 }
 
 
@@ -389,14 +357,14 @@ footer {
 
 footer p {
 	text-align: left;
-	color: #ccc;
+	color: #fff;
 	font-size: 12px;
 	margin: 0;
 	padding: 0;
 }
 
 footer p a {
-	color: #ccc;
+	color: #fff;
 	font-weight: bold;
 }
 
@@ -420,13 +388,13 @@ footer .footer-content li a, footer .footer-content h4 {
 }
 
 footer .footer-content li a {
- color: #505050;
+ color: #fff;
     font-size: 0.8em;
     text-decoration: underline;
 }
 
-footer .footer-content li a:hover { 
-	color: #909090;
+footer .footer-content li a:hover {
+	color: #fff;
 }
 
 footer .footer-content h4 {
@@ -450,7 +418,7 @@ footer .footer-bottom p {
 }
 
 footer .footer-bottom p, footer .footer-bottom p a {
-	color: #666;
+	color: #fff;
 }
 
 
@@ -459,10 +427,10 @@ footer .footer-bottom p, footer .footer-bottom p a {
 
 @media screen and (max-width: 740px) {
 
-	body { font-size: 0.8em; }	
+	body { font-size: 0.8em; }
 
 	header { padding: 10px; }
-	
+
 	header h1 { text-align: center; }
 
 	div#container { width: auto; }
@@ -472,7 +440,7 @@ footer .footer-bottom p, footer .footer-bottom p a {
 	footer .footer-content ul.endfooter { margin-bottom: 0px; }
 
 	.width { width:auto; padding-left: 10px; padding-right: 10px; }
-	
+
 	#content, aside.sidebar { float: none; width: auto; }
 
 	footer .footer-content ul { width: auto; float: none; }
@@ -483,7 +451,7 @@ footer .footer-bottom p, footer .footer-bottom p a {
 
 	body { font-size: 0.8em; }
 
-	
+
 	nav ul li { float: none; text-align:center;  }
 
 	nav ul li a { margin-top: 0; }
